--- a/datePicker.html
+++ b/datePicker.html
@@ -227,6 +227,7 @@
         }
       }
       new DatePicker(document.querySelector("#datePicker"));
+      console.log();
     </script>
 </body>
 </html>
